Adding SAML/One Time passcode configurations - phase 1

--- a/org.eclipse.cft.server.core/build.properties
+++ b/org.eclipse.cft.server.core/build.properties
@@ -5,4 +5,6 @@ bin.includes = META-INF/,\
                plugin.xml,\
                schema/,\
                OSGI-INF/,\
-               lib/
+               lib/,\
+               lib/cloudfoundry-client-lib-1.1.4.BUILD-SNAPSHOT.jar
+bin.excludes = lib/cloudfoundry-client-lib-1.1.2.jar
