--- a/org.eclipse.cft.server.core/.classpath
+++ b/org.eclipse.cft.server.core/.classpath
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry exported="true" kind="lib" path="lib/cloudfoundry-client-lib-1.1.2.jar" sourcepath="/cloudfoundry-client-lib"/>
+	<classpathentry exported="true" kind="lib" path="lib/cloudfoundry-client-lib-1.1.4.BUILD-SNAPSHOT.jar" sourcepath="/home/snpe/projects/cf-java-client.mw/cloudfoundry-client-lib/target/cloudfoundry-client-lib-1.1.4.BUILD-SNAPSHOT-sources.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/aopalliance-1.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/commons-codec-1.6.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/commons-logging-1.1.3.jar"/>
@@ -21,7 +21,7 @@
 	<classpathentry exported="true" kind="lib" path="lib/spring-expression-4.0.5.RELEASE.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/spring-security-config-3.2.5.RELEASE.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/spring-security-core-3.2.5.RELEASE.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/spring-security-oauth2-2.0.4.RELEASE.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/spring-security-oauth2-2.0.4.RELEASE.jar" sourcepath="/home/snpe/.m2/repository/org/springframework/security/oauth/spring-security-oauth2/2.0.4.RELEASE/spring-security-oauth2-2.0.4.RELEASE-sources.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/spring-security-web-3.2.5.RELEASE.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/spring-web-4.0.5.RELEASE.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/spring-webmvc-4.0.5.RELEASE.jar"/>
